--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: docker:latest
 
 variables:
-  IMAGE_TAG: "risk-frontend-react_alpine:1.0.0"
+    IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
 
 build image:
   script:
