--- a/risk-front-end/Dockerfile
+++ b/risk-front-end/Dockerfile
@@ -1,15 +1,11 @@
-#Stage 1
+##Stage 1
 FROM node:17-alpine as builder
 WORKDIR risk-front-end
 COPY package.json .
 COPY package-lock.json .
 RUN npm install
+RUN npm i serve
 COPY . .
+EXPOSE 3000
 RUN npm run build
-
-#Stage 2
-FROM nginx:1.19.0
-WORKDIR /usr/share/nginx/html
-RUN rm -rf ./*
-COPY --from=builder /risk-front-end/build .
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
+CMD [ "npx", "serve", "build" ]
