--- a/risk-front-end/Dockerfile
+++ b/risk-front-end/Dockerfile
@@ -1,7 +1,7 @@
 ##Stage 1
 FROM node:13.12.0-alpine as build
 WORKDIR /risk-front-end
-ENV PATH /risk-front-en/node_modules/.bin:$PATH
+ENV PATH /risk-front-end/node_modules/.bin:$PATH
 COPY package.json ./
 COPY package-lock.json ./
 RUN npm ci --silent
@@ -12,6 +12,6 @@ RUN npm run build
 # production environment
 FROM nginx:stable-alpine
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=build /risk-front-en/build /usr/share/nginx/html
+COPY --from=build /risk-front-end/build /usr/share/nginx/html
 EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
