--- a/risk-front-end/Dockerfile
+++ b/risk-front-end/Dockerfile
@@ -3,8 +3,8 @@ FROM node:13.12.0-alpine as build
 WORKDIR /risk-front-end
 COPY package.json .
 COPY package-lock.json .
-RUN npm ci --silent
-RUN npm install react-scripts@3.4.1 -g --silent
+RUN npm ci
+RUN npm install react-scripts@3.4.1 -g
 COPY . ./
 RUN npm run build
 
