--- a/risk-front-end/Dockerfile
+++ b/risk-front-end/Dockerfile
@@ -1,10 +1,15 @@
+##Stage 1
 FROM node:17-alpine as builder
-WORKDIR risk-front-end
-COPY package.json .
-COPY package-lock.json .
-RUN npm install
-RUN npm i serve
+WORKDIR /risk-front-end
+ENV PATH /risk-front-end/node_modules/.bin:$PATH
+COPY package*.json ./
+RUN npm install --silent --only=production
 COPY . .
-EXPOSE 3000
 RUN npm run build
-CMD [ "npx", "serve", "build" ]
+
+# production environment
+FROM nginx:stable-alpine
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /risk-front-end/build /usr/share/nginx/html
+EXPOSE 3000
+CMD ["nginx", "-g", "daemon off;"]
