--- a/risk-front-end/Dockerfile
+++ b/risk-front-end/Dockerfile
@@ -3,7 +3,7 @@ FROM node:17-alpine as builder
 WORKDIR /risk-front-end
 ENV PATH /risk-front-end/node_modules/.bin:$PATH
 COPY package*.json ./
-RUN npm install
+RUN npm install --silent --only=production
 COPY . .
 RUN npm run build
 
