--- a/risk-front-end/package.json
+++ b/risk-front-end/package.json
@@ -36,7 +36,7 @@
   },
   "jest": {
     "transformIgnorePatterns": [
-      "node_modules/(?!axios)"
+      "node_modules\/(?!(axios|@3d-dice/dice-box-threejs))"
     ]
   },
   "eslintConfig": {
