--- a/risk-front-end/package.json
+++ b/risk-front-end/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.1.3",
+    "cypress": "^12.3.0",
     "localforage": "^1.10.0",
     "mui": "^0.0.1",
     "react": "^18.2.0",
@@ -36,7 +37,7 @@
   },
   "jest": {
     "transformIgnorePatterns": [
-      "node_modules\/(?!(axios|@3d-dice/dice-box-threejs))"
+      "node_modules/(?!(axios|@3d-dice/dice-box-threejs))"
     ]
   },
   "eslintConfig": {
