--- a/risk-front-end/package.json
+++ b/risk-front-end/package.json
@@ -16,7 +16,6 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.1.3",
-    "cypress": "^12.3.0",
     "localforage": "^1.10.0",
     "mui": "^0.0.1",
     "react": "^18.2.0",
@@ -33,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress-open": "cypress open",
+    "cypress-run": "cypress run"
   },
   "jest": {
     "transformIgnorePatterns": [
@@ -59,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^12.3.0",
     "dotenv": "^16.0.3"
   }
 }
